# ABLE-MCP

./: .gitignore  README.md  pyproject.toml
extension/: README.md  build.ts  manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/: audioclipactions.ts  config.ts  dialogs.ts  extension.ts  llm.ts  methods.ts  midiclipactions.ts  rpc.ts  wav.ts
extension/tests/: smoke.js
src/able_mcp/: __init__.py  assist.py  config.py  project.py  server.py
src/able_mcp/als/: __init__.py  analysis.py  parser.py  schema.py
src/able_mcp/lom/: __init__.py  client.py
src/able_mcp/midi/: __init__.py  analysis.py  complement.py
tests/: test_als_analysis.py  test_als_parser.py  test_assist.py  test_lom_client.py  test_midi_analysis.py  test_midi_complement.py  test_project.py  test_real_als.py
tests/fixtures/: __init__.py
tests/fixtures/real/: simple_live12.als
