[project]
name = "able-mcp"
version = "0.1.0"
description = "MCP server for Ableton Live 12: .als analysis + LOM bridge for assisted track creation and finishing."
authors = [
    { name = "Chris Connelly", email = "connellychris@me.com" }
]
requires-python = ">=3.11,<3.13"
# Pinned exactly. Bumps must be deliberate; review uv.lock diff on every change.
dependencies = [
    "mcp==1.27.2",
    "websockets==16.0",
]

[project.scripts]
able-mcp = "able_mcp.server:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.15",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
